<resources>
    <string name="app_name">PaymentAppDesign</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Sent Money-->
    <string name="your_balance">Your balance</string>
    <string name="balance">$ 926.21</string>
    <string name="card_holder">card holder</string>
    <string name="expires">expires</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="search_transaction">Search transaction</string>
    <string name="to">to:</string>

    <string name="credit_card_number1">****  ****  ****  8014</string>
    <string name="credit_card_number2">****  ****  ****  3849</string>
    <string name="credit_card_number3">****  ****  ****  2345</string>

    <string name="credit_card_holder_name1">Lindsey Johnson</string>
    <string name="credit_card_holder_name2">Lindsey Johnson</string>
    <string name="credit_card_holder_name3">Lindsey Johnson</string>

    <string name="credit_card_expiry_date1">08/21</string>
    <string name="credit_card_expiry_date2">08/22</string>
    <string name="credit_card_expiry_date3">08/23</string>

    <!--Send Money-->
    <string name="send_money">Send money</string>
    <string name="select_credit_card">Select credit card</string>
    <string name="recipient">Recipient</string>
    <string name="show_all">Show all</string>
    <string name="transaction_details">Transaction details</string>
    <string name="change_currency">change currency</string>
    <string name="hint_amount">120.50</string>
    <string name="amount">Amount</string>
    <string name="dollar">$</string>
    <string name="description">Description</string>
    <string name="optional">(optional)</string>
    <string name="confirm">Confirm</string>
    <string name="new_credit_card">New\n credit card</string>
    <string name="four_star">* * * *</string>
    <string name="card">Card</string>
    <string name="bank">Bank</string>


    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="profile_information">Profile Information</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="notifications">Notifications</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="account">Account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
</resources>